syntax = "proto3";
package checkers.checkers;

option go_package = "github.com/faridanangs/checkers/x/checkers/types";

message SystemInfo {
  uint64 nextId = 1; 
  string fifoHeadIndex = 2;
  string fifoTailIndex = 3;
}
